fix(ui): gear5 is hidden on mobile

--- a/src/styles/gears.css
+++ b/src/styles/gears.css
@@ -33,14 +33,18 @@
 }
 
 .gear5 {
-  position: absolute;
+  position: relative;
   z-index: -1;
-  top: 400px;
-  right: -50px;
+  bottom: 505px;
+  left: 120px;
   mix-blend-mode: soft-light;
 }
 
 .move {
-  /* position: relative; */
   top: 50px;
+}
+@media (max-width: 800px) {
+  .gear5 {
+    display: hidden;
+  }
 }
